<?xml version="1.0"?>
<package format="3">
  <name>camera_models</name>
  <version>0.0.0</version>
  <description>Camera model library used by VINS-Fusion.</description>
  <maintainer email="dvorak@todo.todo">dvorak</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
